# ESGnie_categoriser

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  setup.cfg
categorizer/: main.py  storage.py
categorizer/classifier/: __init__.py  base.py  zero_shot_classifier.py
data/: __init__.py
tests/: test_main.py
