[tool.poetry]
name = "esgnie_categoriser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.7.1"
pandas = "^1.5.2"
lazy = "^1.5"
transformers = {extras = ["torch"], version = "^4.25.1"}
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8-awesome = "^1.3.0"
unify = "^0.5"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
